<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/secondary"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:backgroundTint="@color/secondary"
        android:src="@drawable/ic_person"/>

    <Button
        android:id="@+id/buttonSelectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_photo"
        android:textColor="@color/text_primary"
        android:backgroundTint="@color/primary"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/primary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmployeeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_number"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/primary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>